Added jdk to mvn pom