@@ -1,13 +1,14 @@
 package cm.grant.examples;
 
-import com.sun.tools.javac.util.List;
 import junit.framework.TestCase;
+
+import java.util.Arrays;
 
 public class $TodoListTest extends TestCase {
 
   public void testRender() throws Exception {
     $TodoList.Props props = new $TodoList.Props();
-    props.items = List.of("milk", "cookies");
+    props.items = Arrays.asList("milk", "cookies");
     $TodoList $TodoList = new $TodoList(props);
     assertEquals(
         "<ul><li>milk</li><li>cookies</li></ul>",
